@@ -49,6 +49,7 @@
  * = TSL now supports whitespace characters in exponent
  * = Fixed bug in TSLCompiler related to multiple nested parenthesis with exponents
  * = Fixed bug ctrl+T does not create a new tab in scripting and custom functions when focus is on code editor
+ * = Fixed bug with localization - now even top menu is reloaded if language has been changed
 
 
  ### --------- Version 2.0.0ß - beta -----------  04.03.2016 17:42
